@@ -1,9 +1,10 @@
 general valgrind monitor commands:
-  help [debug]             : monitor command help. With debug: + debugging commands
+  help [debug]            : monitor command help. With debug: + debugging commands
   v.wait [<ms>]           : sleep <ms> (default 0) then continue
   v.info all_errors       : show all errors found so far
   v.info last_error       : show last error found
   v.info n_errs_found     : show the nr of errors found so far
+  v.info open_fds         : show open file descriptors (only if --track-fds=yes)
   v.kill                  : kill the Valgrind process
   v.set gdb_output        : set valgrind output to gdb
   v.set log_output        : set valgrind output to log
@@ -36,11 +37,12 @@ memcheck monitor commands:
          with len > 1, will also show "interior pointers")
 
 general valgrind monitor commands:
-  help [debug]             : monitor command help. With debug: + debugging commands
+  help [debug]            : monitor command help. With debug: + debugging commands
   v.wait [<ms>]           : sleep <ms> (default 0) then continue
   v.info all_errors       : show all errors found so far
   v.info last_error       : show last error found
   v.info n_errs_found     : show the nr of errors found so far
+  v.info open_fds         : show open file descriptors (only if --track-fds=yes)
   v.kill                  : kill the Valgrind process
   v.set gdb_output        : set valgrind output to gdb
   v.set log_output        : set valgrind output to log
